# lab-more-project-setup

./: README.md  chat.py  pyproject.toml
.github/workflows/: integration-tests.yaml  integration-tests.yml  tests.yaml  tests.yml
src/: chat.py
