[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["chat.py"]

[project]
name = "cmc-csci040-jackbegley"
version = "0.1.1"
description = "A pirate-talking LLM chatbot built with Groq"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "groq",
    "python-dotenv",
]

[project.scripts]
chat = "chat:repl"
