[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-jackbegley"
version = "0.1.1"
description = "A pirate-talking LLM chatbot built with Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "groq",
  "python-dotenv",
  "pytest",
  "coverage",
]

[project.scripts]
pirate-chat = "chat:repl"

[tool.setuptools]
py-modules = ["chat"]
package-dir = {"" = "src"}
